# infer_sdk

./: .gitignore  CMakeLists.txt  cv_cfg.json
include/: arcface.h  attr.h  backend.h  buffers.h  common.h  face_align.h  feat_database.h  infer.h  infer_impl.h  parser.h  rtmpose.h  scrfd.h  stat.h  task.h  yolo.h
src/: arcface.cc  attr.cc  backend.cc  buffers.cc  common.cc  face_align.cc  feat_database.cc  infer.cc  main.cc  parser.cc  rtmpose.cc  scrfd.cc  stat.cc  task.cc  yolo.cc
